--- a/FilmCity/estilos/parciales/_footer.scss
+++ b/FilmCity/estilos/parciales/_footer.scss
@@ -10,11 +10,15 @@ footer{
             font-size: 25px;
         }
         .enlaces{
-            font-size: 30px;
+            padding: 30px;
+            margin-top: 10px;
+            font-size: 15px;
             text-align: left;
             font-weight: 200;
 
             a{
+                margin-top: 10px;
+                margin-bottom: 10px;
                 text-decoration: none;
                 display: block;
                 color: $color_principal;
