--- a/FilmCity/estilos/estilos.scss
+++ b/FilmCity/estilos/estilos.scss
@@ -6,3 +6,4 @@
 @import "./parciales/detallesSeries";
 @import "./parciales/series";
 @import "./parciales/footer";
+@import "./parciales/reproductorSeries";
