--- a/FilmCity/estilos/parciales/_detallesSeries.scss
+++ b/FilmCity/estilos/parciales/_detallesSeries.scss
@@ -3,8 +3,17 @@ body{
     margin: auto;
 }
 
+//BANNER
+.banner{
+    width: 100%;
+    margin: auto;
+}
+
+
+//CAPITULOS
+
 .capitulos{
-    width: 90%;
+    width: 95%;
     margin: auto;
     margin-top: 1%;
 }
