--- a/FilmCity/estilos/parciales/_home.scss
+++ b/FilmCity/estilos/parciales/_home.scss
@@ -33,6 +33,10 @@
       gap: 10px;
       margin-top: 15px;
 
+      a{
+        text-decoration: none;
+      }
+
       .btn-netflix {
         display: flex;
         align-items: center;
