--- a/FilmCity/estilos/parciales/_detallesSeries.scss
+++ b/FilmCity/estilos/parciales/_detallesSeries.scss
@@ -7,6 +7,16 @@ body{
 .banner{
     width: 100%;
     margin: auto;
+    position: relative;
+
+    .logo_pelicula{
+        width: 70%;
+        top: 20%;
+        left: 15%;
+        position: absolute;
+        
+    }
+
 }
 
 
@@ -101,6 +111,16 @@ body{
 
 @media (min-width: 768px) {
 
+    .banner{
+    
+        .logo_pelicula{
+            width: 40%;
+            top: 30%;
+            left: 5%;
+        }
+    
+    }
+
     .temporadas{
         width: 60%;
     }
@@ -108,6 +128,16 @@ body{
 }
 
 @media (min-width: 992px) {
+
+    .banner{
+    
+        .logo_pelicula{
+            width: 30%;
+            top: 45%;
+            left: 5%;
+        }
+    
+    }
 
     .temporadas{
         width: 40%;
@@ -126,6 +156,16 @@ body{
 }
 
 @media (min-width: 1200px) {
+
+    .banner{
+    
+        .logo_pelicula{
+            width: 30%;
+            top: 50%;
+            left: 5%;
+        }
+    
+    }
 
     .temporadas{
         width: 35%;
